Fixed changes bar jumping on merge requests
Closes #37589

--- a/app/assets/stylesheets/pages/diff.scss
+++ b/app/assets/stylesheets/pages/diff.scss
@@ -608,7 +608,7 @@
 
       + .files,
       + .alert {
-        margin-top: 30px;
+        margin-top: 32px;
       }
     }
   }
